# viewers-leaderboard-backend

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  run_tests.yml
src/viewers_leaderboard/: chat.py  config.py  database.py  lifespan.py  log.py  main.py  mixins.py  models.py  settings.py
src/viewers_leaderboard/ranking/: models.py  routes.py
src/viewers_leaderboard/twitch/: auth.py  client.py  eventsub.py  models.py  stream.py  transport.py  user.py
src/viewers_leaderboard/webhook/: models.py  routes.py  transport.py
src/viewers_leaderboard_backend/: main.py
tests/: conftest.py
tests/viewers_leaderboard/: lifespan_test.py  main_test.py  test_database.py  test_lifespan.py
tests/viewers_leaderboard/ranking/: test_routes.py
tests/viewers_leaderboard/twitch/: test_auth.py  test_eventsub.py  test_stream.py  test_user.py
tests/viewers_leaderboard/webhook/: test_routes.py  test_transport.py
