[project]
name = "viewers-leaderboard-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lucas Limeira", email = "lucasalveslm@gmail.com"},
]
dependencies = ["fastapi>=0.115.6", "uvicorn>=0.32.1", "twitchio>=2.10.0", "loguru>=0.7.3", "pydantic-settings>=2.6.1", "beanie[srv]>=1.28.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = [
    "ENV=test",
    "APP_CLIENT_ID=test-client-id",
    "APP_CLIENT_SECRET=test-client-secret",
    "APP_ACCESS_TOKEN=test-app-access-token",
    "WEBHOOK_SECRET=test-webhook-secret",
    "MONGO_CONN_STR=test",
    "MONGO_DB_NAME=test"
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "polyfactory>=2.18.1",
    "httpx>=0.28.1",
    "pytest-env>=1.1.5",
    "mongomock-motor>=0.0.34",
    "freezegun>=1.5.1",
]
